--- a/phase1/Phase1.ipynb
+++ b/phase1/Phase1.ipynb
@@ -359,7 +359,7 @@
     "root_data = \"../data/\"                # where puzzle_2x2, puzzle_4x4, puzzle_8x8 live\n",
     "output_root = \"../phase1/results/\"   # where sliced pieces will be saved\n",
     "\n",
-    "# Map folder name -> grid size. Update if your folder names differ.\n",
+    "\n",
     "puzzle_folders = {\n",
     "    \"puzzle_2x2\": 2,\n",
     "    \"puzzle_4x4\": 4,\n",
@@ -370,18 +370,11 @@
     "os.makedirs(output_root, exist_ok=True)\n",
     "\n",
     "\n",
-    "# ----------------------------\n",
-    "# Utility: slice any image into grid_size x grid_size pieces\n",
-    "# ----------------------------\n",
+    " \n",
+    "#   slice any image into grid_size x grid_size pieces\n",
+    " \n",
     "def slice_grid(image_path, save_dir, grid_size):\n",
-    "    \"\"\"\n",
-    "    Slice the image at image_path into grid_size x grid_size tiles and save them to save_dir.\n",
-    "    Behavior:\n",
-    "      - If the image dimensions are not perfectly divisible by grid_size, the last row/col\n",
-    "        includes the remainder so we still cover the entire image.\n",
-    "    Returns:\n",
-    "      number_of_pieces_saved (int)\n",
-    "    \"\"\"\n",
+    "\n",
     "    img = cv2.imread(image_path)\n",
     "    if img is None:\n",
     "        raise ValueError(f\"Failed to read image: {image_path}\")\n",
@@ -419,9 +412,9 @@
     "    return index\n",
     "\n",
     "\n",
-    "# ----------------------------\n",
+    "\n",
     "# Main processing loop: go over each configured puzzle folder\n",
-    "# ----------------------------\n",
+    "\n",
     "for folder_name, grid in puzzle_folders.items():\n",
     "    input_folder = os.path.join(root_data, folder_name)\n",
     "    output_folder = os.path.join(output_root, folder_name)\n",
